# pythonActs

./: README.md  python_act1.ipynb  python_act2.ipynb
act1/: async.py  attrdict.py  attrdict_test.py
act2/: document.py  load_taxi_data.py
act2/docreader/: README.md  pyproject.toml
act2/docreader/src/docreader/: __init__.py  document.py  docx_document.py  pdf_document.py
act2/docreader/tests/: simple_test.py
