[project]
name = "docreader"
version = "0.1.0"
description = "Just another document reader tool"
authors = [
    {name = "Martin Ludeiro",email = "martin.ludeiro@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "docreader", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
