[project]
name = "docreader"
version = "0.1.0"
description = "Just another document reader tool"
authors = [
    {name = "Martin Ludeiro",email = "martin.ludeiro@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pathlib (>=1.0.1,<2.0.0)",
    "pdfplumber (>=0.11.7,<0.12.0)",
    "docx (>=0.2.4,<0.3.0)"
]

[tool.poetry]
packages = [{include = "docreader", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
